compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__effectful_function_is_generator.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub effect Store(a) {\n  Get() -> a\n}\n\npub fn fetch() -> Int {\n  Get()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub effect Store(a) {
  Get() -> a
}

pub fn fetch() -> Int {
  Get()
}


----- COMPILED JAVASCRIPT
export function* fetch() {
  return Get();
}
