compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__handle_expression_with_effect_bubbling.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub effect Log {\n  Emit(String) -> Nil\n}\n\npub effect Store {\n  Get() -> Int\n}\n\nfn computation() -> Int {\n  Emit(\"hello\")\n  Get()\n}\n\npub fn run(state: Int) -> Int {\n  handle computation() with state {\n    Log.Emit(msg, resume) -> resume(Nil, state)\n    Return(v) -> v\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub effect Log {
  Emit(String) -> Nil
}

pub effect Store {
  Get() -> Int
}

fn computation() -> Int {
  Emit("hello")
  Get()
}

pub fn run(state: Int) -> Int {
  handle computation() with state {
    Log.Emit(msg, resume) -> resume(Nil, state)
    Return(v) -> v
  }
}


----- COMPILED JAVASCRIPT
function* computation() {
  yield { type: "Log.Emit", args: ["hello"] };
  return yield { type: "Store.Get", args: [] };
}

export function* run(state) {
  return yield* (function*() { const gen = computation();
    function* loop(state, $next) {
      const $r = gen.next($next);
      if ($r.done) {
        const v = $r.value;
        return v;
      }
      const $effect = $r.value;
      if ($effect.type === "Log.Emit") {
        const msg = $effect.args[0];
        const resume = ($res, $ns) => loop($ns, $res);
        return resume(undefined, state);
      }
      return yield $effect;
    }
    return yield* loop(state, undefined); })();
}
