compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__private_effectful_function_is_generator.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 656
expression: "\npub effect Log {\n  Emit(String) -> Nil\n}\n\nfn log_something(msg: String) -> Nil {\n  Emit(msg)\n}\n\npub fn run() -> Nil {\n  log_something(\"hi\")\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub effect Log {
  Emit(String) -> Nil
}

fn log_something(msg: String) -> Nil {
  Emit(msg)
}

pub fn run() -> Nil {
  log_something("hi")
}


----- COMPILED JAVASCRIPT
function* log_something(msg) {
  return yield { type: "Log.Emit", args: [msg] };
}

export function* run() {
  return log_something("hi");
}
